@@ -1,0 +1,2 @@
+Update FSF postal address.
+Fixed-Lintian-Tags: old-fsf-address-in-copyright-file
